--- a/style_cmd.css
+++ b/style_cmd.css
@@ -105,6 +105,21 @@ html, body {
 .wrapper .main__items:first-child h2, .wrapper .main__items:first-child p {
   width: calc(100vw - 14rem);
 }
+@media screen and (max-width: 1024px) {
+  .wrapper .main__items:first-child h2, .wrapper .main__items:first-child p {
+    width: calc(100vw - 10rem);
+  }
+}
+@media screen and (max-width: 768px) {
+  .wrapper .main__items:first-child h2, .wrapper .main__items:first-child p {
+    width: calc(100vw - 6rem);
+  }
+}
+@media screen and (max-width: 480px) {
+  .wrapper .main__items:first-child h2, .wrapper .main__items:first-child p {
+    width: calc(100vw - 2rem);
+  }
+}
 .wrapper .main__items:first-child h2 {
   font-size: 2rem;
 }
@@ -114,16 +129,45 @@ html, body {
 .wrapper .main__items ul {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 1rem;
 }
 .wrapper .main__items ul li {
   background-color: #242424;
   border-radius: 10px;
   padding: 0.75rem 2rem;
-  margin: 1rem 0.25rem;
+  margin: 1rem 0.25rem 0;
+  text-align: center;
   color: #777;
 }
 .wrapper .main__items ul li:hover {
   color: white;
+}
+@media screen and (max-width: 417px) {
+  .wrapper .main__items ul li {
+    width: calc(50% - 0.5rem);
+    padding: 0.75rem 0;
+  }
+}
+@media screen and (max-width: 480px) {
+  .wrapper .main__items ul {
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .wrapper .main__items {
+    padding: 0 5rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .wrapper .main__items {
+    padding: 0 3rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .wrapper .main__items {
+    padding: 0 1rem;
+  }
 }
 .wrapper .cmd {
   display: flex;
@@ -134,10 +178,43 @@ html, body {
   padding: 0 7rem;
   margin: 0.5rem 0;
 }
+@media screen and (max-width: 1024px) {
+  .wrapper .cmd__items {
+    padding: 0 5rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .wrapper .cmd__items {
+    padding: 0 3rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .wrapper .cmd__items {
+    padding: 0 1rem;
+  }
+}
+.wrapper .cmd__container {
+  margin-bottom: 1rem;
+}
 .wrapper .cmd__container details {
   background-color: #242424;
   border-radius: 10px;
   width: calc(100vw - 14rem);
+}
+@media screen and (max-width: 1024px) {
+  .wrapper .cmd__container details {
+    width: calc(100vw - 10rem);
+  }
+}
+@media screen and (max-width: 768px) {
+  .wrapper .cmd__container details {
+    width: calc(100vw - 6rem);
+  }
+}
+@media screen and (max-width: 480px) {
+  .wrapper .cmd__container details {
+    width: calc(100vw - 2rem);
+  }
 }
 .wrapper .cmd__container details summary {
   padding: 1.5rem;
