--- a/style_cmd.css
+++ b/style_cmd.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Andika&display=swap");
+
 ::-webkit-scrollbar {
   background-color: #151515;
   width: 6px;
@@ -11,6 +12,7 @@
   display: flex;
   align-items: center;
   background-color: #151515;
+  font-family: "Andika", sans-serif;
   position: fixed;
   width: 100vw;
   height: 3.5rem;
@@ -46,6 +48,10 @@
   text-decoration: none;
 }
 .nav__container a button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
   background: transparent;
   border-radius: 4px;
   font-size: 1.025rem;
@@ -56,13 +62,29 @@
   height: 3.5rem;
   padding: 0 1rem;
 }
-.nav__container a button:hover {
-  color: #e9cdeb;
+.nav__container a button svg {
+  fill: #e9cdeb;
+  margin-right: 0.5rem;
+}
+.nav__container a button::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #e9cdeb;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+.nav__container a button:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 .nav__container img {
   width: 3.5rem;
-  padding: 0.25rem;
-  margin-right: 0.25rem;
+  padding: 0.3rem;
 }
 .nav__container:first-child {
   margin: 0 1rem;
@@ -138,10 +160,11 @@ html, body {
   padding: 0.75rem 2rem;
   margin: 1rem 0.25rem 0;
   text-align: center;
+  cursor: pointer;
   color: #777;
 }
 .wrapper .main__items ul li:hover {
-  color: white;
+  color: white !important;
 }
 @media screen and (max-width: 417px) {
   .wrapper .main__items ul li {
@@ -301,11 +324,6 @@ html, body {
 .wrapper .cmd__container details .details div ul {
   list-style: none;
   font-size: 0.8rem;
-}
-
-.active {
-  background-color: #e9cdeb !important;
-  color: black !important;
 }
 
 /*# sourceMappingURL=style_cmd.css.map */
