--- a/scss/template/_scrollbar.scss
+++ b/scss/template/_scrollbar.scss
@@ -1,6 +1,4 @@
-$color: #e9cdeb;
-$dark-color: #242424;
-$span-color: #9c9c9c;
+@import "variables";
 
 ::-webkit-scrollbar {
   background-color: #151515;
