--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,4 @@
-@import "nav";
+@import "import";
 
 * {
   box-sizing: border-box;
@@ -7,7 +7,7 @@
 }
 html, body {
   font-family: "Andika", sans-serif;
-  background-color: #363636;
+  background-color: $background-color;
   user-select: none;
   height: 100%;
   width: 100%;
@@ -125,7 +125,7 @@ html, body {
             @include center;
             svg {
               @include noneAnimation;
-              fill: #363636;
+              fill: $background-color;
             }
             .fillActive {
               @include noneAnimation;
