--- a/scss/template/_nav.scss
+++ b/scss/template/_nav.scss
@@ -1,8 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Andika&display=swap");
 
-@import "scrollbar";
-@import "mixins";
-
 .nav {
   display: flex;
   align-items: center;
@@ -21,12 +18,15 @@
     }
     &:first-child {
       margin: 0 1rem;
+      @media screen and (max-width: 768px) {
+        margin: 0;
+      }
     }
     &:nth-child(2) {
       .nav__container {
         display: none;
         align-items: center;
-        font-size: 2.25rem;
+        font-size: 2rem;
         height: 3.5rem;
         color: white;
         z-index: 2;
