Создание сайта: вёрстка, доработка, улучшение адаптивности

--- a/scss/_import.scss
+++ b/scss/_import.scss
@@ -1,3 +1,7 @@
 @import "template/menu";
 @import "template/nav";
+@import "template/info";
 @import "template/scrollbar";
+@import "template/support";
+@import "template/main";
+@import "template/footer";
