--- a/scss/template/_variables.scss
+++ b/scss/template/_variables.scss
@@ -1,4 +1,6 @@
 $color: #e9cdeb;
 $background-color: #363636;
+$background-color-2: #454545;
 $dark-color: #242424;
 $span-color: #9c9c9c;
+$gradient: linear-gradient(to right, $color, #ee9ca7);
