--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,6 +8,7 @@
 html, body {
   font-family: "Andika", sans-serif;
   background-color: $background-color;
+  scroll-behavior: smooth;
   user-select: none;
   height: 100%;
   width: 100%;
