--- a/style.css
+++ b/style.css
@@ -1,223 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
 :root {
   --color: #e9cdeb;
   --font: "Inter", sans-serif;
-}
-
-::-webkit-scrollbar {
-  background-color: #151515;
-  width: 6px;
-}
-::-webkit-scrollbar-thumb {
-  background-color: var(--color);
-}
-
-html, body {
-  height: 100%;
-  width: 100%;
-  font-family: var(--font);
-  user-select: none;
-}
-
-.nav {
-  display: flex;
-  align-items: center;
-  background-color: #151515;
-  position: fixed;
-  width: 100vw;
-  height: 3.5rem;
-  z-index: 3;
-  justify-content: space-between;
-}
-
-.nav .nav__items, .nav .nav__items a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.nav__container {
-  display: flex;
-}
-
-.nav__items:nth-child(1) .nav__container:nth-child(1) {
-  margin: 0 1rem;
-}
-
-.nav__container img {
-  width: 3.5rem;
-  padding: 0.25rem;
-  margin-right: 0.25rem;
-}
-
-@media screen and (max-width: 768px) {
-  .nav__container:nth-child(2) {
-    display: none;
-  }
-}
-
-.nav .nav__items:nth-child(2) .nav__container {
-  display: none;
-  align-items: center;
-  font-size: 2.25rem;
-  height: 3.5rem;
-  color: white;
-  z-index: 2;
-  padding: 0 1rem;
-}
-
-@media screen and (max-width: 768px) {
-  .nav .nav__items:nth-child(2) .nav__container {
-    display: flex;
-  }
-}
-
-.nav__container a {
-  text-decoration: none;
-}
-  
-.nav__container a button {
-  background: transparent;
-  border-radius: 4px;
-  font-size: 1.025rem;
-  cursor: pointer;
-  outline: none;
-  border: none;
-  color: white;
-  height: 3.5rem;
-  padding: 0 1rem;
-}
-
-.nav__container a button:hover {
-  color: var(--color);
-}
-
-.info__close {
-  color: white;
-  font-size: 2rem;
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 1rem;
-}
-.info ul {
-  list-style: none;
-  width: 100%;
-}
-.info ul a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  font-size: 1.5rem;
-  color: white;
-  width: calc(100% - 2rem);
-  margin: 1rem;
-}
-
-.info {
-  display: flex;
-  font-size: 1.2rem;
-  color: black;
-  flex-direction: column;
-  justify-content: center;
-  padding-top: 3.5rem;
-  height: 100vh;
-  align-items: center;
-}
-
-.info a {
-  border-radius: 5px;
-  text-decoration: none;
-  background: #00000033;
-  color: white;
-  padding: 16px ;
-  margin: 1rem;
-  width: 300px;
-}
-
-@media screen and (max-width: 663px) {
-  .info a {
-    width: 70%;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .info a {
-    width: 90%;
-  }
-}
-
-.info {
-  background-image: url("images/backgrounds/bc3.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.info p{
-  text-align: center;
-  
-}
-
-.info__weight{
-  font-weight: 600;
-}
-
-.info__buttons {
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  font-weight: 300;
-}
-
-.main h2{
-  text-align: center;
-}
-
-.main p{
-  max-width: 1440px;
-}
-
-.main {
-  align-items: center;
-  padding: 0 7rem; 
-  margin: 1rem 0;
-  flex-direction: column;
-  display: flex;
-  font-size: 1.1rem; 
-}
-
-@media screen and (max-width: 768px) {
-  .main {
-    padding: 0 5rem;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .main {
-    padding: 0 3.5rem;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .main {
-    padding: 0 2rem;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .main {
-    padding: 0 1rem;
-  }
 }
 
 .functions{
@@ -239,11 +23,32 @@ html, body {
   margin: .5rem;
   display: flex;
   justify-content: center;
-  max-width: 1200px;
+  max-width: calc(1200px + 3rem);
   width: 100%;
   padding: 1.5rem;
 }
+@media screen and (max-width: 675px) {
+  .advantages1 {
+    padding: 1rem;
+    flex-direction: column;
+  }
+  .advantages {
+    padding: 0rem;
+    flex-direction: column;
+  }
+  .uptimes2, .function5 {
+    width: 100% !important;
+  }
+  .uptime, .chat, .function2, .text3 {
+    margin: .5rem 0 !important;
+  }
+}
 .uptimes2{
+  flex-wrap: wrap;
+  width: 50%;
+  display: flex;
+}
+.function5{
   flex-wrap: wrap;
   width: 50%;
   display: flex;
@@ -254,22 +59,11 @@ html, body {
   border-radius: 10px;
   padding: 1.5rem;
 }
-.uptime:hover {
-  background-color: #e9cdeb;
-}
-.chat{ /*кккккккккккккккккккккккккккккккккккккккккккккккккккккккккккккккккккккккк*/
+.chat{
   padding: 1.5rem;
   margin: 1rem;
   background-color: #6ed7f2;
   border-radius: 10px;
-}
-.chat:hover {
-  background-color: #e9cdeb;
-}
-.function5{
-  flex-wrap: wrap;
-  width: 50%;
-  display: flex;
 }
 .function2{
   margin: 1rem;
@@ -277,49 +71,12 @@ html, body {
   border-radius: 10px;
   padding: 1.5rem;
 }
-.function2:hover {
-  background-color: #e9cdeb;
-}
 .text3{
   margin: 1rem;
   background-color: #e15b4c;
   border-radius: 10px;
   padding: 1.5rem;
 }
-.text3:hover {
-  background-color: #e9cdeb;
-}
 .advantages h3{
   margin-bottom: 1rem;
-}
-.buttons2{
-  margin-top: 5rem;
-  background-color: #e3dddd;
-  text-align: center;
-  border-radius: 9px;
-  padding: 2rem;
-  margin-left: 45rem;
-  margin-right: 45rem;
-}
-.buttons2 h5{
-  font-size: 1.6rem;
-}
-.buttons3{
-  justify-content: center;
-  display: flex;
-  text-decoration: none;
-}
-.invitebot{
-  color: white;
-  text-decoration: none;
-  background-color: #19c9f5;
-  border-radius: 9px;
-  padding: 0.5rem;
-}
-.helping{
-  color: white;
-  text-decoration: none;
-  background-color: #19c9f5;
-  border-radius: 9px;
-  padding: 0.5rem;
 }
