--- a/style_cmd.css
+++ b/style_cmd.css
@@ -68,7 +68,7 @@
   position: fixed;
   width: 100vw;
   height: 3.5rem;
-  z-index: 3;
+  z-index: 5;
   justify-content: space-between;
 }
 .nav__items, .nav__items a {
@@ -152,12 +152,291 @@
   }
 }
 
+.info {
+  background: url("images/backgrounds/bg.webp");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding-top: 3.5rem;
+  height: 100vh;
+}
+.info:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.2);
+  z-index: 2;
+}
+.info__items {
+  display: flex;
+  justify-content: center;
+  max-width: calc(1200px - 2rem);
+  position: relative;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  color: white;
+  margin: 0 2.5rem;
+}
+.info__items h1 {
+  font-size: 4rem;
+}
+@media screen and (max-width: 768px) {
+  .info__items h1 {
+    font-size: 3rem;
+  }
+}
+@media screen and (max-width: 711px) {
+  .info__items h1 {
+    text-align: center;
+  }
+}
+@media screen and (max-width: 650px) {
+  .info__items h1 {
+    font-size: 2.5rem;
+  }
+}
+.info__items p {
+  font-weight: 600;
+  font-size: 2rem;
+  margin: 1rem 0;
+}
+@media screen and (max-width: 768px) {
+  .info__items p {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 711px) {
+  .info__items p {
+    text-align: center;
+  }
+}
+@media screen and (max-width: 650px) {
+  .info__items p {
+    font-size: 1.25rem;
+  }
+}
+.info__items div {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+@media screen and (max-width: 711px) {
+  .info__items div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.info__items div a {
+  background: linear-gradient(to right, var(--color), #ee9ca7);
+  text-align: center;
+  text-decoration: none;
+  border-radius: 20px;
+  width: 300px;
+  padding: 1rem;
+  color: black;
+  margin: 1rem 1rem 0 0;
+}
+.info__items div a:nth-child(2) {
+  background: white;
+}
+@media screen and (max-width: 711px) {
+  .info__items div a {
+    margin: 1rem 1rem 0;
+  }
+}
+.info__items div a p {
+  font-weight: 300;
+  font-size: 1.2rem;
+  margin: auto;
+}
+
 ::-webkit-scrollbar {
   background-color: #151515;
   width: 6px;
 }
 ::-webkit-scrollbar-thumb {
   background-color: #e9cdeb;
+}
+
+.support {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.support h5 {
+  font-size: 2.5rem;
+}
+@media screen and (max-width: 1200px) {
+  .support {
+    padding: 0 2rem;
+  }
+}
+@media screen and (max-width: 417px) {
+  .support {
+    padding: 0 1rem;
+  }
+}
+.support__items {
+  background-color: #454545;
+  max-width: calc(1200px - 2rem);
+  width: 100%;
+  text-align: center;
+  border-radius: 15px;
+  padding: 2rem;
+  margin: 1rem;
+}
+@media screen and (max-width: 417px) {
+  .support__items {
+    padding: 1rem;
+  }
+}
+.support__containers {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 1rem;
+}
+.support__container {
+  background-color: #666;
+  border-radius: 12px;
+  margin: 1rem 1rem 0;
+  padding: 0.75rem 2.5rem;
+  font-size: 1.2rem;
+  width: 275px;
+}
+.support__container:first-child {
+  background: linear-gradient(to right, #e9cdeb, #ee9ca7);
+}
+.support__container a {
+  color: white;
+  text-align: center;
+  text-decoration: none;
+}
+
+.main2 {
+  display: flex;
+  align-items: center;
+  margin: 1rem;
+  flex-direction: column;
+  font-size: 1.1rem;
+}
+.main2 h2 {
+  text-align: center;
+  margin: 1rem 0;
+}
+.main2 p {
+  max-width: calc(1200px - 2rem);
+}
+@media screen and (max-width: 1200px) {
+  .main2 p {
+    padding: 0 2rem;
+  }
+}
+@media screen and (max-width: 417px) {
+  .main2 p {
+    padding: 0;
+  }
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #454545;
+  margin-top: 3rem;
+  font-size: 1.1rem;
+}
+.footer__wrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
+  padding: 1.5rem 1rem;
+  justify-content: space-evenly;
+  max-width: calc(1200px - 2rem);
+}
+@media screen and (max-width: 715px) {
+  .footer__container {
+    width: 50%;
+  }
+}
+@media screen and (max-width: 417px) {
+  .footer__container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+  }
+}
+.footer__container p {
+  margin: 0.5rem 0;
+}
+.footer__container:first-child p {
+  margin: 0.5rem;
+}
+@media screen and (max-width: 417px) {
+  .footer__container:first-child p {
+    margin: 0;
+  }
+}
+.footer__container:nth-child(2) {
+  transition: 0.2s;
+  margin: 1rem 0;
+  list-style: none;
+}
+.footer__container:nth-child(2) ul {
+  list-style: none;
+}
+.footer__container:nth-child(2) p {
+  font-weight: bold;
+}
+.footer__container:nth-child(2) a {
+  text-decoration: none;
+  color: white;
+}
+.footer__container:nth-child(2) a:hover {
+  color: #e9cdeb;
+  transition: 0.2s;
+}
+.footer__container:last-child p {
+  margin: 0.5rem;
+}
+@media screen and (max-width: 417px) {
+  .footer__container:last-child p {
+    margin: 0.5rem 0;
+  }
+}
+.footer__container:last-child div {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 0 1rem;
+}
+@media screen and (max-width: 417px) {
+  .footer__container:last-child div {
+    justify-content: center;
+  }
+}
+.footer__container:last-child div a {
+  text-decoration: none;
+  color: black;
+  border-radius: 10px;
+  background-color: #e9cdeb;
+  padding: 0.6rem 1rem;
+  margin: 0.5rem;
+  font-size: 1rem;
+  text-align: center;
 }
 
 * {
@@ -169,6 +448,7 @@
 html, body {
   font-family: "Andika", sans-serif;
   background-color: #363636;
+  scroll-behavior: smooth;
   user-select: none;
   height: 100%;
   width: 100%;
