--- a/scss/template/_variables.scss
+++ b/scss/template/_variables.scss
@@ -1,6 +1,7 @@
 $color: #e9cdeb;
-$background-color: #363636;
-$background-color-2: #454545;
+$background-color: #323232;
+$background-color-2: #424242;
 $dark-color: #242424;
 $span-color: #9c9c9c;
+$font: "Inter", sans-serif;
 $gradient: linear-gradient(to right, $color, #ee9ca7);
