--- a/scss/template/_support.scss
+++ b/scss/template/_support.scss
@@ -19,7 +19,7 @@
     width: 100%;
     text-align: center;
     border-radius: 15px;
-    padding: 2rem;
+    padding: 3rem 2rem;
     margin: 1rem;
     @media screen and (max-width: 417px) {
       padding: 1rem;
