--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@
   margin: 0.5rem 0;
 }
 .footer__container:first-child p {
-  margin: 0.5rem;
+  margin: 0.5rem 0;
 }
 @media screen and (max-width: 417px) {
   .footer__container:first-child p {
